--- a/templates/flows/flow_list.haml
+++ b/templates/flows/flow_list.haml
@@ -1,6 +1,5 @@
 -extends "smartmin/list.html"
--load smartmin sms temba compress
--load i18n humanize
+-load smartmin sms temba compress i18n humanize
 
 -block page-title
   -trans "Flows"
@@ -207,18 +206,20 @@
                       %td
                         -if not object.is_archived
                           .whitespace-no-break.flex.items-center.justify-end
+                            -if object.has_issues
+                              .icon-warning.mr-2(title='{{ _("Has issues")|escapejs }}')
 
                             -if object.run_stats.total
-                              .linked.mr-2.whitespace-no-wrap{onclick:"goto(event)", href:'{% url "flows.flow_results" object.uuid %}'}
-                                {{object.run_stats.total|intcomma}}
+                              .linked.mr-2.whitespace-no-wrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
+                                {{ object.run_stats.total|intcomma }}
 
                               \/
-                              .text-center.linked.mx-2.whitespace-no-wrap{onclick:"goto(event)", href:'{% url "flows.flow_results" object.uuid %}'}
-                                {{object.run_stats.completion}}%
+                              .text-center.linked.mx-2.whitespace-no-wrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
+                                {{ object.run_stats.completion }}%
 
                   -empty
                     %tr.empty_list
-                      %td{ colspan:'99' }
+                      %td(colspan='99')
                         -trans "No matching flows."
 
             -block paginator
