Fixed minor issues with facebook app channel.

--- a/templates/channels/channellog_log.haml
+++ b/templates/channels/channellog_log.haml
@@ -1,36 +1,37 @@
 -load humanize channels i18n
 
-%table.list
-  %tbody
-    %tr.border-b
-      %td(style="width: 30px;")
-        .font-normal.text-2xl
-          {{ log.response_status }}
+.table-container
+  %table.list
+    %tbody
+      %tr.border-b
+        %td(style="width: 30px;")
+          .font-normal.text-2xl
+            {{ log.response_status }}
 
-      %td
-        .font-normal.inline.mr-1
-          %span.method= log.method
-        {% channellog_url log %}
+        %td
+          .font-normal.inline.mr-1
+            %span.method= log.method
+          {% channellog_url log %}
 
-      %td
-        .text-right.whitespace-no-wrap
-          -if log.request_time
-            -trans "Took"
-            %span.request-time-value
-              {{ log.request_time|default:"0"|intcomma }}ms
-      %td
-        .text-right.whitespace-no-wrap
-          {{log.created_on|date:"M j, Y g:i:s a"}}
+        %td
+          .text-right.whitespace-no-wrap
+            -if log.request_time
+              -trans "Took"
+              %span.request-time-value
+                {{ log.request_time|default:"0"|intcomma }}ms
+        %td
+          .text-right.whitespace-no-wrap
+            {{log.created_on|date:"M j, Y g:i:s a"}}
 
 
-    %tr
-      %td(colspan="4" style="padding:0;")
-        %pre.prettyprint.request<
-          :plain
-            {% channellog_request log %}
+      %tr
+        %td(colspan="4" style="padding:0;")
+          %pre.prettyprint.request<
+            :plain
+              {% channellog_request log %}
 
-    %tr
-      %td(colspan="4" style="padding:0;")
-        %pre.prettyprint.response<
-          :plain
-            {% channellog_response log %}
+      %tr
+        %td(colspan="4" style="padding:0;")
+          %pre.prettyprint.response<
+            :plain
+              {% channellog_response log %}
