--- a/templates/channels/channellog_read.haml
+++ b/templates/channels/channellog_read.haml
@@ -111,6 +111,13 @@
   -compress css inline
     {% lessblock %}
       :plain
+        .table-container {
+          overflow-x: auto;
+          max-width: calc(100vw - 84px);
+          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+          border-radius: 0.5rem;
+        }
+
         table.list {
           tbody {
             tr:first-child {
