--- a/templates/channels/types/facebookapp/claim.haml
+++ b/templates/channels/types/facebookapp/claim.haml
@@ -2,8 +2,13 @@
 -load i18n compress temba
 
 -block pre-form
-  -blocktrans trimmed with name=brand.name
-    You can connect your Facebook page to {{name}} in just a few simple steps.
+  -if form.non_field_errors
+    -for err in form.non_field_errors
+      .alert-error
+        = err
+  -else
+    -blocktrans trimmed with name=brand.name
+      You can connect your Facebook page to {{name}} in just a few simple steps.
 
 -block form
   .mt-4.card
