--- a/templates/orgs/org_home.haml
+++ b/templates/orgs/org_home.haml
@@ -172,7 +172,7 @@
     }
 
     {% if use_weni_layout %}
-      #id-user, #id-accounts {
+      #id-user, #id-accounts, #id-topups, #id-two_factor {
         display: none;
       }
     {% endif %}
