Convert globals to use soft dependencies

--- a/templates/globals/global_list.haml
+++ b/templates/globals/global_list.haml
@@ -71,9 +71,9 @@
                 Found {{ results_count }} globals matching <i>{{search}}</i>.
 
           -block pre-table
-            %temba-modax{ id:'update-global', header:'{{_("Update Global")|escapejs}}' }
-            %temba-modax{ id:'delete-global', header:'{{_("Delete Global")|escapejs}}'}
-            %temba-modax{ id:'uses-global', header:'{{_("Global Details")|escapejs}}'}
+            %temba-modax(id='update-global' header='{{_("Update Global")|escapejs}}')
+            %temba-modax(id='delete-global' header='{{_("Delete Global")|escapejs}}')
+            %temba-modax(id='uses-global' header='{{_("Global Details")|escapejs}}')
 
           %table.list.object-list.lined{class:"{% if org_perms.contacts.contact_update %}selectable{%endif%}"}
             %tbody
@@ -87,7 +87,7 @@
                     {{ obj.value|truncatechars:128 }}
                   %td.w-12
                     .flex.text-center
-                      -with usage_count=obj.get_usage_count
+                      -with usage_count=obj.usage_count
                         -if usage_count
                           .uses(onclick='event.stopPropagation(); showDetailGlobalModal({{ obj.id }}, "{{ obj.name }}");')
                             .lbl.linked
@@ -99,7 +99,7 @@
 
                   %td.w-10
                     -if org_perms.globals.global_delete
-                      .pl-2.pt-1.delete-link.linked.text-gray-400{style:"visibility:hidden", onclick:"event.stopPropagation(); showDeleteGlobalModal({{obj.id}});"}
+                      .pl-2.pt-1.delete-link.linked.text-gray-400(style="visibility:hidden" onclick='event.stopPropagation(); showDeleteGlobalModal("{{obj.uuid}}");')
                         %span.icon-close
               -empty
                 %tr.empty_list
@@ -117,9 +117,9 @@
       modax.open = true;
     }
 
-    function showDeleteGlobalModal(id) {
+    function showDeleteGlobalModal(uuid) {
       var modax = document.querySelector('#delete-global');
-      modax.endpoint = `/global/delete/${id}/`;
+      modax.endpoint = `/global/delete/${uuid}/`;
       modax.open = true;
     }
 
