--- a/static/fonts/icons/style.css
+++ b/static/fonts/icons/style.css
@@ -149,7 +149,7 @@
   content: "\e257";
 }
 .icon-bubble:before {
-  content: "\ead8";
+  content: "\e00f";
 }
 .icon-bubble-2:before {
   content: "\e011";
@@ -641,7 +641,7 @@
   content: "\e00c";
 }
 .icon-users-2:before {
-  content: "\e92a";
+  content: "\e03c";
 }
 .icon-vcard:before {
   content: "\e02c";
@@ -771,4 +771,13 @@
 }
 .icon-vonage:before {
   content: "\e910";
+}
+.icon-two-factor:before {
+  content: "\e91c";
+}
+.icon-hand:before {
+  content: "\e079";
+}
+.icon-help:before {
+  content: "\e91d";
 }
