--- a/templates/includes/recipients_contact.haml
+++ b/templates/includes/recipients_contact.haml
@@ -1,5 +1,5 @@
 -load contacts
 
-.item.contact.lbl.linked.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_read' contact.uuid %}")
-  .icon.icon-user.text-dark-alpha-300.-mb-1
+.lbl-group.linked.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_read' contact.uuid %}")
+  %temba-icon(name="user")
   {{ contact|name_or_urn:user_org }}
