Fixed issues with flow results search.

--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -678,6 +678,7 @@
         dateFormat: 'Y-m-d H:i:S',
         allowInput: true,
         enableTime: true,
+        minuteIncrement: 1,
         defaultHour: 0
       });
       $(".flatpickr.end").flatpickr({
