--- a/templates/campaigns/campaign_read.haml
+++ b/templates/campaigns/campaign_read.haml
@@ -41,7 +41,7 @@
 
         %tr.campaign-event{valign:'center', data-event-id:'{{event.pk}}'}
 
-          %td.whitespace-no-wrap
+          %td.whitespace-nowrap
             %a(href="{% url 'campaigns.campaignevent_read' event.pk %}")
               {{ event.offset_display }} {{ event.relative_to.label }}
 
