--- a/templates/contacts/contactimport_create.haml
+++ b/templates/contacts/contactimport_create.haml
@@ -39,22 +39,22 @@
 
     %table.list.my-6
       %tr
-        %th.whitespace-no-wrap
+        %th.whitespace-nowrap
           -trans "Column Header"
-        %th.whitespace-no-wrap
+        %th.whitespace-nowrap
           -trans "Imported As"
-        %th.whitespace-no-wrap
+        %th.whitespace-nowrap
           -trans "Details"
       %tr
-        %td.whitespace-no-wrap
+        %td.whitespace-nowrap
           Name
-        %td.whitespace-no-wrap
+        %td.whitespace-nowrap
           -trans "Contact name"
         %td
       %tr
-        %td.whitespace-no-wrap
+        %td.whitespace-nowrap
           Language
-        %td.whitespace-no-wrap
+        %td.whitespace-nowrap
           -trans "Contact language"
         %td
           -blocktrans trimmed
@@ -71,9 +71,9 @@
               -blocktrans trimmed with country=org_country.name
                 Numbers without a country code will be treated as local numbers in {{ country }}.
       %tr
-        %td.whitespace-no-wrap
+        %td.whitespace-nowrap
           Field:<i>custom_field</i>
-        %td.whitespace-no-wrap
+        %td.whitespace-nowrap
           <i>custom_field</i>
         %td
           -blocktrans trimmed
