--- a/templates/api/v2/api_explorer.haml
+++ b/templates/api/v2/api_explorer.haml
@@ -71,10 +71,10 @@
         .request-form.rounded-lg.border.p-6.bg-gray-100.mt-4
           .request-header.font-mono.mb-4
             <b class="font-bold">{{ endpoint.method }}</b>
-            .whitespace-no-wrap.text-sm(class="md:text-base md:inline")
+            .whitespace-nowrap.text-sm(class="md:text-base md:inline")
               {{brand.api_link}}{{ endpoint.url }}.json<span class="query-display"></span><br/>
             <b class="font-bold">Authorization:</b>
-            .whitespace-no-wrap.text-sm(class="md:text-base md:inline")
+            .whitespace-nowrap.text-sm(class="md:text-base md:inline")
               Token {{ request.user.api_token }}
           -if endpoint.params
             .form-group.mt-4.items-center(class="md:flex")
