--- a/templates/flows/flow_list.haml
+++ b/templates/flows/flow_list.haml
@@ -176,7 +176,7 @@
                         %th
                       %th
                       %th
-                      %th.whitespace-no-wrap
+                      %th.whitespace-nowrap
                         Runs / Completion
 
                 %tbody
@@ -189,7 +189,7 @@
 
                       %td.w-full
                         .flex.flex-wrap.flex-end
-                          .flex.inline.whitespace-no-wrap
+                          .flex.inline.whitespace-nowrap
                             -if object.flow_type == 'V'
                               .icon-phone.mr-2.leading-snug
                             -elif object.flow_type == 'S'
@@ -210,11 +210,11 @@
                               .icon-warning.mr-2(title='{{ _("Has issues")|escapejs }}')
 
                             -if object.run_stats.total
-                              .linked.mr-2.whitespace-no-wrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
+                              .linked.mr-2.whitespace-nowrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
                                 {{ object.run_stats.total|intcomma }}
 
                               \/
-                              .text-center.linked.mx-2.whitespace-no-wrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
+                              .text-center.linked.mx-2.whitespace-nowrap(onclick="goto(event)" href='{% url "flows.flow_results" object.uuid %}')
                                 {{ object.run_stats.completion }}%
 
                   -empty
