--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -243,7 +243,7 @@
             %a(href="{% url 'users.user_logout' %}?next=/users/login")
               .circle
                 .icon-exit
-              .title.whitespace-no-wrap
+              .title.whitespace-nowrap
                 -trans "sign out"
   -else
     -block temba-login
