--- a/templates/public/public_style.haml
+++ b/templates/public/public_style.haml
@@ -213,42 +213,42 @@
     %table.list.lined
       %tr
         %td
-          .code.whitespace-no-wrap
+          .code.whitespace-nowrap
             \.bleed-t
         %td.w-full
           Bleed Top
 
       %tr
         %td
-          .code.whitespace-no-wrap
+          .code.whitespace-nowrap
             \.bleed-b
         %td.w-full
           Bleed Bottom
 
       %tr
         %td
-          .code.whitespace-no-wrap
+          .code.whitespace-nowrap
             \.bleed-r
         %td.w-full
           Bleed Right
 
       %tr
         %td
-          .code.whitespace-no-wrap
+          .code.whitespace-nowrap
             \.bleed-l
         %td.w-full
           Bleed Left
 
       %tr
         %td
-          .code.whitespace-no-wrap
+          .code.whitespace-nowrap
             \.bleed-x
         %td.w-full
           Bleed Horizontal
 
       %tr
         %td
-          .code.whitespace-no-wrap
+          .code.whitespace-nowrap
             \.bleed-y
         %td.w-full
           Bleed Vertical
@@ -283,7 +283,7 @@
     .card.flex.items-stretch
       .bleed-l.bleed-y.bg-secondary
         .flex.items-center.h-full
-          .title.text-white.whitespace-no-wrap.p-4
+          .title.text-white.whitespace-nowrap.p-4
             Left Bleed
 
       .flex-grow
@@ -311,7 +311,7 @@
             to create a right pane, an inverted example from the one above.
       .bleed-r.bleed-y.bg-secondary
         .flex.items-center.h-full
-          .title.text-white.whitespace-no-wrap.p-4
+          .title.text-white.whitespace-nowrap.p-4
             Right Bleed
 
   .mt-8
