Enable model instances to show an icon in selects

--- a/templates/campaigns/campaign_read.haml
+++ b/templates/campaigns/campaign_read.haml
@@ -12,10 +12,11 @@
 -block subtitle
   .flex.flex-col
     .summary
-      -if object.group.is_active
-        -include "includes/recipients_group.haml" with group=object.group
-      -else
-        -trans "No group assigned to this campaign"
+      .inline-block
+        -if object.group.is_active
+          -include "includes/recipients_group.haml" with group=object.group
+        -else
+          -trans "No group assigned to this campaign"
 
 -block post-title
   -if object.is_archived
