--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -46,7 +46,6 @@
       var contact = event.target.value;
       var chat = document.querySelector("temba-contact-chat");
       chat.contact = contact;
-      console.log("Setting", contact);
     }
     
     function handleContactHistoryUpdated(event) {
@@ -95,8 +94,7 @@
 
 -block temba-store
   %temba-store(
-    completions="/mr/docs/{{ LANGUAGE_CODE }}/completion.json"
-    functions="/mr/docs/{{ LANGUAGE_CODE }}/functions.json"
+    completion="/mr/docs/{{ LANGUAGE_CODE }}/editor.json"
     fields="/api/v2/fields.json"
     globals="/api/v2/globals.json"
     groups="/api/v2/groups.json")
