--- a/templates/utils/forms/select.haml
+++ b/templates/utils/forms/select.haml
@@ -20,7 +20,8 @@
     {% if group_name %}<optgroup label="{{ group_name }}">{% endif %}
     {% for option in group_choices %}
       {% if option.label != '---------' %}
-        <temba-option name="{{ option.label }}" value="{{ option.value|stringformat:'s' }}" {%if option.selected%}selected{%endif%}></temba-option>
+        <temba-option name="{{ option.label }}" {% if option.icon %} icon="{{option.icon}}" {%endif%} value="{{ option.value|stringformat:'s' }}" {%if option.selected%}selected{%endif%}></temba-option>
+        {{option}}
       {% endif %}
     {% endfor %}
 
