--- a/templates/orgs/org_edit.haml
+++ b/templates/orgs/org_edit.haml
@@ -27,14 +27,16 @@
             You have <b>{{org_count}}</b> child workspaces.
           {% endblocktrans%}
 
-      .mt-2.text-sm.text-gray-700
-        -blocktrans trimmed with timezone=object.timezone
-          Click here to edit
+      -if use_weni_layout
+        .mt-2.text-sm.text-gray-700
+          -blocktrans trimmed with timezone=object.timezone
+            Click here to edit
       
-    -# .buttons
-    -#   -if object.is_multi_org
-    -#     .button-light(onclick="goto(event)" href='{% url "orgs.org_sub_orgs" %}')
-    -#       -trans "Manage Workspaces"
+    -if not use_weni_layout
+      .buttons
+        -if object.is_multi_org
+          .button-light(onclick="goto(event)" href='{% url "orgs.org_sub_orgs" %}')
+            -trans "Manage Workspaces"
 
 
 
