fix: org selector and remove sidebar channels button from weni dash

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -260,7 +260,7 @@
         .org-header
           -if user_orgs|length > 1
             .pull-right.toggle
-              .icon-menu-2
+              .icon-menu
 
           .org
             {{ user_org.name|truncatechars:30 }}
