Add note support  * Encapsulate modax hide response  * Tweak nav to enable modals to avoid page width change from scrollbar  * Updates for modal load/submit event fixes

--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -91,7 +91,8 @@ html {
   --button-font-size: 1.125rem;
 
   --header-bg: var(--color-primary-dark);
-
+  --header-text: var(--color-text-light);
+  
   --temba-textinput-padding: 9px;
   --temba-textinput-font-size: var(--font-size);
 
