--- a/static/less/legacy.less
+++ b/static/less/legacy.less
@@ -778,7 +778,7 @@ table.list-table {
 
     .submenu-container {
       position: absolute;
-      top: 35px;
+      top: -20px;
       left: -30px;
       padding: 10px 5px;
       padding-bottom: 40px;
@@ -951,13 +951,11 @@ a.org-choose {
 .org-header {
 
   z-index: 1039;
-  position: absolute;
-  top: -7px;
-  right: 30px;
+  margin-top:-6px;
+  margin-right:30px;
+  margin-bottom:-28px;
   text-align: center;
-  float: right;
   background: rgba(0, 0, 0, .15);
-  margin-top: -0px;
   padding-top: 6px;
   font-size: 11px;
   max-width: 180px;
@@ -988,8 +986,9 @@ a.org-choose {
   }
 
   .other-orgs {
-    width: 180px;
-
+    width: 178px;
+    position:absolute;
+    right:40px;
     .account-details {
       padding: 5px 0px;
       border-bottom: 1px solid #ccc;
@@ -1029,8 +1028,6 @@ a.org-choose {
       display: inline-block;
       .border-radius(0, 0, 3px, 3px);
     }
-
-    .drop-shadow(0, 1px, 1px, 3px, .1, 0);
   }
 
 }
