--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -153,7 +153,8 @@
       -elif event.type == 'run_result_changed'
         -blocktrans trimmed with name=event.name category=event.category value=event.value
           Run result <b>{{ name }}</b> updated to <b>{{ value }}</b> with category <b>{{ category }}</b>
-
+      -elif event.type == 'note_created'
+        {{event.text}}
       -elif event.type == 'ticket_opened'
         -url 'tickets.ticket_filter' event.ticket.ticketer.uuid as ticketer_url
         -blocktrans trimmed with subject=event.ticket.subject ticketer=event.ticket.ticketer.name
