--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -65,7 +65,7 @@
                   - trans "Create Contact"
 
             -if org_perms.contacts.contactgroup_create
-              %temba-modax#create-group-modal(header='{% trans "Create Group" %}' endpoint="{% url 'contacts.contactgroup_create' %}" onloaded="handleCreateGroupModalLoaded" onsubmitted="handleCreateGroupModalSubmitted")
+              %temba-modax#create-group-modal(header='{% trans "Create Group" %}' endpoint="{% url 'contacts.contactgroup_create' %}" -temba-loaded="handleCreateGroupModalLoaded")
                 .button-light.block.mt-3
                   - trans "Create Group"
 
@@ -405,6 +405,7 @@
     }
 
     function handleCreateGroupModalSubmitted(event) {
+      console.log("submitted!");
       refresh(function() { recheckIds(); }, true);
     }
 
