--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -6,9 +6,9 @@
 
       #menu {
         display: flex;
-        position: absolute;
-        top: 40px;
-        right: 20px;
+        flex-direction: row;
+        align-items: flex-end;
+        margin-top:-80px;
 
         .submenu {
           display: flex;
@@ -52,7 +52,8 @@
           .icon-menu-4 {
             width: 15px;
             margin-left: 0px;
-            margin-right: 20px;
+            margin-right: 30px;
+            margin-top:-60px;
             font-size: 36px;
             color: var(--color-nav-unselected);
           }
@@ -129,6 +130,7 @@
   {% endlessblock %}
 
 #menu
+  .flex-grow
   -if org_perms.msgs.msg_inbox and not request.user.is_superuser
     %a{href:"{% url 'msgs.msg_inbox' %}", class:"{% active request 'inbox|outbox|broadcast|call|msg/filter|msg/flow|msg/archived|failed' %}"}
       .circle
