--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -12,7 +12,7 @@
           %td.value-icon(style="width: 20px")
             %span.glyph.icon-bullhorn.text-gray-500
           %td.value-recipient
-            .pt-1
+            .pt-1.inline-block
               -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.raw_urns
           %td.value-text
             {{ broadcast.get_default_text }}
@@ -23,7 +23,7 @@
       -for object in object_list
         %tr
           %td.value-recipient(colspan="2")
-            .pt-1
+            .pt-1.inline-block
               -include "includes/recipients_contact.haml" with contact=object.contact
           %td.value-text
             {% get_value object 'text' %}
