--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -155,12 +155,12 @@
           Run result <b>{{ name }}</b> updated to <b>{{ value }}</b> with category <b>{{ category }}</b>
       -elif event.type == 'ticket_event'
         -if event.ticket_event_type == 'N'
-          {{event.text}}
+          {{event.note}}
         -elif event.ticket_event_type == 'O'
           -url 'tickets.ticket_filter' event.ticket.ticketer.uuid as ticketer_url
           -blocktrans trimmed with subject=event.ticket.subject ticketer=event.ticket.ticketer.name
             Opened ticket on <a href="{{ ticketer_url }}">{{ ticketer }}</a> with subject <b>{{ subject }}</b>
-        -elif event.type == 'C'
+        -elif event.ticket_event_type == 'C'
           -url 'tickets.ticket_filter' event.ticket.ticketer.uuid as ticketer_url
           -blocktrans trimmed with subject=event.ticket.subject ticketer=event.ticket.ticketer.name
             Closed ticket on <a href="{{ ticketer_url }}">{{ ticketer }}</a> with subject <b>{{ subject }}</b>
