Explicit ticket events

--- a/static/less/legacy.less
+++ b/static/less/legacy.less
@@ -811,9 +811,9 @@ table.list-table {
   @media all and (max-width: 767px) {
     text-align: right;
     right: 25px !important;
-    top: 50px !important;
-    text-align: left;
-    padding: 0;
+    margin-right:15px;
+    margin-top: -65px !important;
+    padding-bottom: 19px;
 
     a {
       width: 42px !important;
