Add support for closed ticket triggers

--- a/templates/triggers/trigger_create_catchall.haml
+++ b/templates/triggers/trigger_create_catchall.haml
@@ -2,4 +2,4 @@
 -load i18n
 
 -block summary
-  -trans "Start a flow after receiving a message not handled elsewhere."
+  -trans "Start a flow after receiving a message that doesn't match any keywords."
