Use shared crudl tests with agent permissions

--- a/static/less/legacy.less
+++ b/static/less/legacy.less
@@ -814,7 +814,8 @@ table.list-table {
     margin-right:15px;
     margin-top: -65px !important;
     padding-bottom: 19px;
-
+    min-height:50px !important;
+    
     a {
       width: 42px !important;
     }
