--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -9,6 +9,7 @@
         flex-direction: row;
         align-items: flex-end;
         margin-top:-80px;
+        min-height:65px;
 
         .submenu {
           display: flex;
