--- a/templates/orgs/user_edit.haml
+++ b/templates/orgs/user_edit.haml
@@ -22,7 +22,7 @@
 
     #current-password.field.formax-vertical.p-4.bg-gray-100.rounded-lg.mt-4
       .mb-2
-        -blocktrans
+        -blocktrans trimmed
           Confirm your current password to save these changes
       {% render_field 'current_password' %}
 
