tweak padding for nav so we don't overlap alerts

--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -9,7 +9,8 @@
         flex-direction: row;
         align-items: flex-end;
         margin-top:-80px;
-        min-height:65px;
+        min-height:81px;
+        padding-bottom:15px;
 
         .submenu {
           display: flex;
