--- a/templates/schedules/schedule_update.haml
+++ b/templates/schedules/schedule_update.haml
@@ -1,24 +1,14 @@
 -extends 'smartmin/form.html'
-
--load i18n humanize
+-load i18n humanize smartmin
 
 -block fields
-  -load smartmin
   .title
     -trans "Schedule"
 
   .mb-3
     -trans "Select when you would like the message to be sent"
 
-  #schedule-options
-    -if object.get_broadcast
-      #schedule-options
-        -render_field 'start_datetime'
-      #recurrence
-        .repeat-period
-          -render_field 'repeat_period'
-        .weekly-repeat-options{class:'{% if form.repeat_period.value == "W" %}{% else%}hidden{%endif%}'}
-          -render_field 'repeat_days_of_week'
+  -include 'includes/schedule_fields.haml' with form=form
 
 -block summary
   -if object.next_fire
@@ -77,14 +67,15 @@
     }
 
     function wireRepeatListener() {
-      var repeatPeriod = document.querySelector("#id_repeat_period");      
+      var repeatPeriod = document.querySelector("#id_repeat_period");
+      var repeatDays = document.querySelector(".repeat-days-container");
       if (repeatPeriod) {
         repeatPeriod.addEventListener("change", function(event){
           var currentRepeat = event.currentTarget.values[0].value;
-          if (currentRepeat == 'W') {
-            document.querySelector(".weekly-repeat-options").classList.remove("hidden");
+          if (currentRepeat === 'W') {
+            repeatDays.classList.remove("hidden");
           } else {
-            document.querySelector(".weekly-repeat-options").classList.add("hidden");
+            repeatDays.classList.add("hidden");
           }
         });
       } else {
