--- a/templates/triggers/trigger_create_schedule.haml
+++ b/templates/triggers/trigger_create_schedule.haml
@@ -4,19 +4,26 @@
 -block summary
   -trans "Start a flow in the future or on a schedule."
 
+-block fields
+  -include 'includes/schedule_fields.haml' with form=form
+  -render_field 'flow'
+  -render_field 'groups'
+  -render_field 'exclude_groups'
+  -render_field 'contacts'
+
 -block extra-script
   {{ block.super }}
   :javascript
     document.addEventListener("DOMContentLoaded", function(){
       var repeatPeriod = document.querySelector("#id_repeat_period");
+      var repeatDays = document.querySelector(".repeat-days-container");
       if (repeatPeriod) {
-        repeatPeriod.addEventListener("change", function(event){
-          
+        repeatPeriod.addEventListener("change", function(event) {
           var currentRepeat = event.currentTarget.values[0].value;
-          if (currentRepeat == 'W') {
-            document.querySelector(".weekly-repeat-options").classList.remove("hidden");
+          if (currentRepeat === 'W') {
+            repeatDays.classList.remove("hidden");
           } else {
-            document.querySelector(".weekly-repeat-options").classList.add("hidden");
+            repeatDays.classList.add("hidden");
           }
         });
       }
