--- a/templates/schedules/schedule_update.haml
+++ b/templates/schedules/schedule_update.haml
@@ -14,37 +14,21 @@
   -if object.next_fire
     .flex
       .schedule-summary
-        -spaceless
-          -if object.get_broadcast
-            -trans "The next message will be sent on"
-            <b>{{ object.next_fire|naturaltime }}</b>.
+        -if object.get_broadcast
+          -blocktrans trimmed with when=object.next_fire|naturaltime
+            The next message will be sent <b>{{ when }}</b>.
 
-        -if not object.repeat_period == 'O'
-          -if object.repeat_period == 'W'
-            -trans "It will repeat every"
-            -with object.get_repeat_days_display|length as day_count
-              -for day in object.get_repeat_days_display
-                {% if forloop.last and day_count > 1 %} and {%endif%}
-                %b
-                  {{day}}{% if not forloop.last and day_count > 2%}, {%endif%}
-
-            -trans "at around the same time."
-          -elif object.repeat_period == 'M'
-            -trans "It will repeat every"
-            %b
-              month
-            -trans "on the"
-            {{ object.repeat_day_of_month|ordinal }}.
-
-          -else
-            -trans "It will repeat"
-            %b
-              {{object.get_repeat_period_display|lower}}
-            -trans "at around the same time."
-        -else
-          -trans "It will "
-          %b
-            -trans "not repeat"
+        -if object.repeat_period == 'M'
+          -blocktrans trimmed with date=object.repeat_day_of_month|ordinal
+            It will repeat every <b>month</b> on the {{ date }}.
+        -elif object.repeat_period == 'W'
+          -trans "It will repeat every"
+          {% for day in object.get_repeat_days_display %}<b>{{ day }}</b>{{ forloop|oxford }}{% endfor %}
+          -trans "at around the same time."
+        -elif object.repeat_period == 'D'
+          -trans "It will repeat <d>daily</b> at around the same time."
+        -elif object.repeat_period == 'O'
+          -trans "It will <b>not repeat</b>."
 
       .unschedule.ml-8
         .button-light(onclick="unschedule(event)" href="{% url 'schedules.schedule_update' object.id %}?start_datetime=&repeat_period=O")
@@ -58,7 +42,7 @@
     %input.button-primary{type:'submit', value:'Schedule'}
 
 -block extra-script
-  {{block.super}}
+  {{ block.super }}
   :javascript
     function unschedule(event) {
       event.stopPropagation();
