Drop Language model and Org.primary_language field

--- a/templates/msgs/broadcast_schedule_list.haml
+++ b/templates/msgs/broadcast_schedule_list.haml
@@ -18,7 +18,7 @@
               -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all urns=object.raw_urns
 
             %td.value-text.field_text
-              {{ object.get_default_text }}
+              {{ object.get_text }}
             %td.value-next
               -if object.schedule.next_fire
                 .glyph.icon-clock
