--- a/templates/msgs/broadcast_schedule_read.haml
+++ b/templates/msgs/broadcast_schedule_read.haml
@@ -21,7 +21,7 @@
                 -plural
                   {{ count_comma }} recipients
             %td
-              {{ object.get_default_text }}
+              {{ object.get_text }}
             %td
               %nobr
                 {% short_datetime object.created_on %}
