--- a/templates/msgs/broadcast_update.haml
+++ b/templates/msgs/broadcast_update.haml
@@ -12,7 +12,7 @@
   -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.raw_urns
 
   .mt-2
-    {{ object.get_default_text }}
+    {{ object.get_text }}
 
 
 
